--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,26 @@ version: "3"
 
 services:
   db:
-    image: "mysql"
+    image: "mysql:5.6"
     environment:
       MYSQL_ROOT_PASSWORD: "root"
       MYSQL_DATABASE: "mweike"
       MYSQL_USER: "weike"
       MYSQL_PASSWORD: "weike"
     ports:
-      - "4306:3306"
+      - "3306:3306"
     volumes: 
       - /Users/IT/proj/mweike/code/db:/docker-entrypoint-initdb.d
 
   web:
-    image: "php"
-      
+    image: "itwk-php"
+    ports:
+      - "9080:80"
+    volumes:
+      - /Users/IT/proj/mweike/code/src:/var/www/html
+#      - /tmp:/var/www/html/data
+
+
 # volumes:
 #   itwk-store:
 
