--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,11 @@ services:
       MYSQL_USER: "weike"
       MYSQL_PASSWORD: "weike"
     ports:
-      - "3306:3306"
+      - "4306:3306"
     volumes: 
       - /Users/IT/proj/mweike/code/db:/docker-entrypoint-initdb.d
+    networks:
+      - app_net
 
   web:
     image: "itwk-php"
@@ -20,10 +22,14 @@ services:
       - "9080:80"
     volumes:
       - /Users/IT/proj/mweike/code/src:/var/www/html
-#      - /tmp:/var/www/html/data
+      # - /tmp:/var/www/html/data
+    networks:
+      - app_net
+
+networks:
+  app_net:
 
 
 # volumes:
 #   itwk-store:
-
 
