--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - "9080:80"
     volumes:
       - /Users/IT/proj/mweike/code/src:/var/www/html
-      # - /tmp:/var/www/html/data
+      - ./config.inc.php:/var/www/html/config/config.inc.php
     networks:
       - app_net
 
